Adjusted dagger modules and added Async test class.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/primary_background"
-    tools:context="io.lundie.gradle.jokegenius.MainActivityFragment">
+    tools:context="io.lundie.gradle.jokegenius.ui.MainActivityFragment">
 
     <TextView
         android:id="@+id/textView"
