Cleaned code, added comments and configured error Snackbar.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/primary_background"
+    android:id="@+id/rootLayout"
     tools:context="io.lundie.gradle.jokegenius.ui.ExtendableActivityFragment">
 
     <TextView
