--- a/app/src/paid/res/layout/fragment_main.xml
+++ b/app/src/paid/res/layout/fragment_main.xml
@@ -58,13 +58,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/half_margin"
-        android:layout_marginTop="@dimen/half_margin"
         android:layout_marginEnd="@dimen/half_margin"
         android:layout_marginBottom="@dimen/half_margin"
         android:text="@string/go"
         ads:backgroundTint="@color/primaryLightColorTrans"
         ads:cornerRadius="@dimen/primary_margin"
-        ads:layout_constraintBottom_toTopOf="@+id/adView"
+        ads:layout_constraintBottom_toBottomOf="@+id/view"
         ads:layout_constraintEnd_toEndOf="parent"
         ads:layout_constraintStart_toStartOf="@+id/view"
         ads:layout_constraintTop_toTopOf="@+id/view"
@@ -86,16 +85,4 @@
         ads:layout_constraintStart_toStartOf="parent"
         ads:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/half_margin"
-        android:layout_marginEnd="@dimen/half_margin"
-        android:layout_marginBottom="@dimen/half_margin"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        ads:layout_constraintBottom_toBottomOf="parent"
-        ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
